@@ -1,7 +1,9 @@
 apply plugin: "java"
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 version = '1.0'
+
 
 jar {
     manifest {
@@ -11,6 +13,11 @@ jar {
 }
 repositories {
     mavenCentral()
+    maven {
+        name = "GradleRIO"
+        url = "http://dev.imjac.in/maven"
+
+    }
 }
 
 dependencies {
@@ -18,28 +25,12 @@ dependencies {
 }
 
 test {
-    systemProperties 'property': 'value'
-    include 'src/chessTests/..*'
-    testLogging.showStandardStreams = true
-
-    // set heap size for the test JVM(s)
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
+    testLogging {
+        events 'skipped', 'failed', 'standard_error'
+        exceptionFormat 'full'
     }
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
-    }
-}
-
-task testData(type: Test){
-    include '**/SuiteData.class'
+    maxHeapSize = '512m'
+    include 'src/test/java/chessTests/Chess/**'
+    //exclude file io tests for travis
+    exclude 'src/test/java/chessTests/Data/**'
 }
